Fix step title alignments [SCI-6994] (#4263)
* Fix step title alignments [SCI-6994]

* Fix step serializer [SCI-6994]

--- a/app/assets/stylesheets/shared/inline_edit.scss
+++ b/app/assets/stylesheets/shared/inline_edit.scss
@@ -8,6 +8,10 @@
 
   &.editing .sci-inline-edit__content {
     background-color: $color-white;
+
+    .sci-inline-edit__content {
+      padding-top: 0;
+    }
   }
 
   .sci-inline-edit__content {
@@ -15,10 +19,10 @@
     border-radius: 4px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     margin-left: -.25em;
     min-height: 36px;
     padding-left: .25em;
+    padding-top: .3em;
     position: relative;
     width: 100%;
 
